@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Keep original file names when PUTing images via WebDAV.
 * [jan] Fix closure compiler errors (Bug #13596).
 * [jan] Return ETags with browse() API method.
 * [mjr] Fix fatal divide by zero error due to incorrectly named variable.
@@ -1348,6 +1349,7 @@
    <date>2014-02-24</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Keep original file names when PUTing images via WebDAV.
 * [jan] Fix closure compiler errors (Bug #13596).
 * [jan] Return ETags with browse() API method.
 * [mjr] Fix fatal divide by zero error due to incorrectly named variable.
